1. refactor.